# Autonomous-Mobile-Robots-Simulation-System

./: CMakeLists.txt  README.md  config.yaml  main.cpp  structs.h
GUI/include/: ActivePointsRenderer.hpp  ApplicationWindow.hpp  GridRenderer.hpp  GuiController.hpp  RobotRenderer.hpp
GUI/src/: ActivePointsRenderer.cpp  ApplicationWindow.cpp  GridRenderer.cpp  GuiController.cpp  RobotRenderer.cpp  raygui_impl.cpp
configs/include/: ActivePointsConfig.hpp  GridConfig.hpp  MainConfig.hpp  RobotConfig.hpp  ScreenConfig.hpp  TaskConfig.hpp
configs/src/: ActivePointsConfig.cpp  GridConfig.cpp  RobotConfig.cpp  ScreenConfig.cpp  TaskConfig.cpp
engine/include/: Core.hpp  Logger.hpp  Robot.hpp  TaskManager.hpp
engine/src/: Core.cpp  Loger.cpp  Robot.cpp  TaskManager.cpp
